# bluerov2-docking

./: .gitignore  .gitmodules  README.md  pytest.ini
.devcontainer/nouveau/: Dockerfile  devcontainer.json
.devcontainer/nvidia/: Dockerfile  devcontainer.json  egpu-render.sh
.docker/compose/: nouveau-desktop.yaml  nvidia-desktop.yaml
prototyping/: _paths.py  dock_signal.py  metrics.py  plots.py  scenarios.py  simulate.py  test_convergence.py  test_dock_signal.py  test_metrics.py  tune.py
prototyping/results/: coarse_pbvs_gains.yaml
report/final/: main.tex
report/final/Sections/: Abstract.tex  Acknowledgments.tex  Appendix.tex  Conclusion.tex  Introduction.tex  Literature Review.tex  Methodology.tex  Nomenclature.tex  Originality Statement.tex  Reference Examples.tex  Results and discussion.tex  TitlePage.tex
report/final/data/aruco/: detection_trials_test2.csv  pose_error_vs_reference.csv  rot_err_vs_range.csv  summary.json  summary.md  test2_detection_rate_by_px.csv
report/proposal/Sections/: Literature Review.tex  Project Dependent Preparations.tex
report/thesis-c/data/aruco/: detection_trials_test1.csv  imu_yaw_check.csv  summary.json  summary.md  test1_detection_rate_by_px.csv  test2_detection_rate_by_px.csv  trans_err_vs_range.csv
src/control/: CMakeLists.txt  package.xml
src/control/config/: coarse_pbvs.yaml  fine_pbvs.yaml
src/control/control/: coarse_approach_node.py  fine_align_node.py  fine_guidance.py  guidance.py  health_gate.py  pbvs.py
src/control/control/integration/: test_coarse_approach_node.py  test_coarse_gate.py  test_fine_align_node.py
src/control/control/tests/: test_fine_guidance.py  test_guidance.py  test_health_gate.py  test_pbvs.py
src/control/launch/: coarse_approach.launch.py  fine_align.launch.py
src/description/: CMakeLists.txt  package.xml
src/description/foxglove/: docking.json
src/description/hooks/: hooks.dsv.in
src/description/models/docking_station/: model.config  model.sdf
src/description/models/docking_station/meshes/: dock_station.dae
src/description/plugins/dock_sway/: DockSway.cc  DockSway.hh  DockSwayMotion.hh
src/description/plugins/dock_sway/test/: DockSwayMotionTest.cc
src/description/rviz/: docking_sim.rviz
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: CoarseApproachStatus.msg  DockPoseMeasurement.msg  DockingState.msg  FilterHealth.msg  FineAlignStatus.msg
src/orchestrator/: CMakeLists.txt  package.xml
src/orchestrator/config/: docking_fsm.yaml
src/orchestrator/launch/: autonomy_deadman.launch.py  docking_fsm.launch.py
src/orchestrator/orchestrator/: autonomy_deadman_node.py  docking_fsm_node.py  transitions.py  vehicle_io.py
src/orchestrator/orchestrator/integration/: test_autonomy_deadman_node.py  test_docking_fsm_node.py
src/orchestrator/orchestrator/tests/: test_transitions.py  test_vehicle_io.py
src/perception/: CMakeLists.txt  package.xml
src/perception/launch/: aruco.launch.py  led_mock.launch.py
src/perception/perception/: aruco_relay.py  led_mock_publisher.py
src/perception/perception/aruco/: aruco_fusion.py  aruco_relay.py  dock_pose_filter.py  dock_visualizer.py
src/perception/perception/aruco/integration/: test_aruco_fusion_node.py  test_dock_pose_filter_node.py
src/perception/perception/aruco/lib/: dock_layout.py  geometry.py  health.py  init_policy.py  kalman.py  noise_model.py  pose_fusion.py  spatial_consensus.py
src/perception/perception/aruco/tests/: test_dock_layout.py  test_geometry.py  test_health.py  test_init_policy.py  test_kalman.py  test_noise_model.py  test_pose_fusion.py  test_spatial_consensus.py
src/perception/perception/utils/: transforms.py
src/perception/perception/utils/tests/: test_transforms.py
src/sim/: CMakeLists.txt  docking_sim.rviz  package.xml
src/sim/launch/: docking_sim.launch.py  sim.launch.py
src/sim/models/docking_station/: model.sdf
src/sim/models/docking_station/meshes/: dock_station.dae  dock_station.glb
src/sim/worlds/: docking.world  ocean.world
thesis-a-report/: References.bib  main.bbl  main.blg  main.nlo  main.tex
thesis-a-report/Diagrams/: system-block-diagram.mmd
thesis-a-report/Sections/: Acknowledgments.tex  Appendix.tex  Conclusion.tex  Introduction.tex  Literature Review.tex  Project Dependent Preparations.tex  Research Question and Project Plan.tex  TitlePage.tex
vision-aruco-pose-estimation/: calibrate_camera.py  camera_calib.npz  estimate_pose.py
