<?xml version="1.0"?>
<package format="3">
  <name>description</name>
  <version>0.0.1</version>
  <description>Gazebo assets and RViz configs for BlueROV2 docking</description>
  <maintainer email="alanchoi.uni@gmail.com">Alan Choi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
