<?xml version="1.0"?>
<package format="3">
  <name>interfaces</name>
  <version>0.0.1</version>
  <description>Custom ROS2 message, service, and action definitions for the BlueROV2 docking project</description>
  <maintainer email="alanchoi.uni@gmail.com">Alan Choi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
