<?xml version="1.0"?>
<package format="3">
  <name>perception</name>
  <version>0.0.1</version>
  <description>Perception nodes for BlueROV2 docking</description>
  <maintainer email="alanchoi.uni@gmail.com">Alan Choi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <exec_depend>aruco_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
